--- a/package.json
+++ b/package.json
@@ -9,14 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.1",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.27.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/table": "^2.2.1",
+    "@hookform/resolvers": "^3.1.1",
+    "@mantine/hooks": "^6.0.15",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.1",
+    "@tanstack/react-query": "^4.29.19",
+    "@tippyjs/react": "^4.2.6",
+    "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
+    "@uploadthing/react": "^5.1.0",
+    "@upstash/redis": "^1.22.0",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "editorjs-react-renderer": "^3.5.1",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "lucide-react": "^0.252.0",
+    "nanoid": "^4.0.2",
+    "next": "^13.4.9",
+    "next-auth": "^4.22.1",
+    "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-hook-form": "^7.45.1",
+    "react-textarea-autosize": "^8.5.1",
+    "react-toastify": "^9.1.3",
+    "tippy.js": "^6.3.7",
+    "typescript": "5.1.3",
+    "uploadthing": "^5.1.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/editorjs__header": "^2.6.0",
+    "@types/lodash.debounce": "^4.0.7",
+    "sass": "^1.63.6"
   }
 }
