--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL='mysql://0up7b59oll292h8g51kx:pscale_pw_X6HOkmuNcv1Bug7s4SuEqg3gcDCmcmZcWFxYbqVAjzg@gcp.connect.psdb.cloud/clone-redit?sslaccept=strict'
+DATABASE_URL='mysql://wa0fsi242zg0rbxmgzdr:pscale_pw_NY53ANJ3hS3wiypAvUzCclJsKhWGAVdEqHrve7s7cx7@gcp.connect.psdb.cloud/clone-redit?sslaccept=strict'
 NEXTAUTH_SECRET=22051995
 
 GOOGLE_CLIENT_ID=108990524648-d345elsk6c7dud4de6nhugrd035ju34h.apps.googleusercontent.com
